# text-to-ascii-art

./: Cargo.toml  LICENSE  README.md
src/: ascii.rs  fonts.rs  lib.rs  main.rs
src/fonts/: default_font.rs  small.rs  standard.rs
