[package]
name = "text-to-ascii-art"
version = "0.1.3"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A simple program to convert text to ASCII art."
homepage = "https://github.com/osmak1234/text-to-ascii-art"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
